--- a/app/views/donation_mailer/information.html.erb
+++ b/app/views/donation_mailer/information.html.erb
@@ -9,8 +9,8 @@
       <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 500px;" class="wrapper">
         <tr>
           <td align="center" valign="top" style="padding: 15px 0;" class="logo">
-            <a href="http://tfgfrontend.herokuapp.com" target="_blank">
-              <img alt="Logo" src="<%= image_path('/images/logo.png') %>" width="200" height="200" style="display: block; font-family: Helvetica, Arial, sans-serif; color: #ffffff; font-size: 16px;" border="0">
+            <a href="http://tfgfrontend0.herokuapp.com" target="_blank">
+              <img alt="Logo" src="/images/logo.png" width="200" height="200" style="display: block; font-family: Helvetica, Arial, sans-serif; color: #ffffff; font-size: 16px;" border="0">
             </a>
           </td>
         </tr>
@@ -232,7 +232,7 @@
           <td align="center" style="font-size: 12px; line-height: 18px; font-family: Helvetica, Arial, sans-serif; color:#666666;">
             Ronda de Sant Pere 67, Barcelona 08003, Spain
             <br>
-            <a href="http://tfgfrontend0.heroku.com" target="_blank" style="color: #666666; text-decoration: none;">Visit out website</a>
+            <a href="http://tfgfrontend0.herokuapp.com" target="_blank" style="color: #666666; text-decoration: none;">Visit out website</a>
           </td>
         </tr>
       </table>
