--- a/app/views/donation_mailer/information.html.erb
+++ b/app/views/donation_mailer/information.html.erb
@@ -10,7 +10,7 @@
         <tr>
           <td align="center" valign="top" style="padding: 15px 0;" class="logo">
             <a href="http://tfgfrontend0.herokuapp.com" target="_blank">
-              <img alt="Logo" src="/images/logo.png" width="200" height="200" style="display: block; font-family: Helvetica, Arial, sans-serif; color: #ffffff; font-size: 16px;" border="0">
+              <img alt="Logo" src="http://tfgbackend0.herokuapp.com/images/logo.png" width="200" height="200" style="display: block; font-family: Helvetica, Arial, sans-serif; color: #ffffff; font-size: 16px;" border="0">
             </a>
           </td>
         </tr>
