--- a/app/views/donation_mailer/information.html.erb
+++ b/app/views/donation_mailer/information.html.erb
@@ -200,7 +200,7 @@
                         <table border="0" cellspacing="0" cellpadding="0" class="mobile-button-container">
                           <tr>
                             <td align="center" style="border-radius: 3px;" bgcolor="#256F9C">
-                              <a href="http://tfgfrontend0.heroku.com" target="_blank" style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; border-radius: 3px; padding: 15px 25px; border: 1px solid #256F9C; display: inline-block;" class="mobile-button">Go to Gift Of Charity</a></td>
+                              <a href="https://tfgfrontend0.herokuapp.com" target="_blank" style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; border-radius: 3px; padding: 15px 25px; border: 1px solid #256F9C; display: inline-block;" class="mobile-button">Go to Gift Of Charity</a></td>
                           </tr>
                         </table>
                       </td>
