--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -17,3 +17,8 @@
 //   .status_tag { background: #6090DB; }
 
 @import "charity_projects";
+
+$skinMainFirstColor: #2b472d !default;
+$skinMainSecondColor: #65a868 !default;
+$skinBorderWindowColor: #e7eee6 !default;
+@import "wigu/active_admin_theme";
