Several bugs fixed

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -22,3 +22,4 @@ $skinMainFirstColor: #2b472d !default;
 $skinMainSecondColor: #65a868 !default;
 $skinBorderWindowColor: #e7eee6 !default;
 @import "wigu/active_admin_theme";
+@import "customice_theme";
