--- a/app/views/donation_mailer/information.text.erb
+++ b/app/views/donation_mailer/information.text.erb
@@ -1,6 +1,6 @@
 Thank you for your donation!
 
-Shipping to: <%= @donation.gift.receiver.address %>, <%= @donation.gift.receiver.city %>, <%= @donation.gift.receiver.province %>, <%= @donation.gift.receiver.country %> <%= @donation.gift.receiver.postcode %>
+Sending your gift to <%= @donation.gift.receiver.name %> with the address: <%= @donation.gift.receiver.address %>, <%= @donation.gift.receiver.city %>, <%= @donation.gift.receiver.province %>, <%= @donation.gift.receiver.country %> <%= @donation.gift.receiver.postcode %>
 
 ----------------------------------------------------------------------------
 <%= @donation.charity_project.name %> -> <%= @donation.amount %>€
