--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -95,6 +95,12 @@
           margin: 0 !important;
           padding: 0 !important;
         }
+
+        #goc-title{
+          font-size: 25px;
+          color: black;
+          text-decoration: none;
+        }
       }
 
       /* ANDROID CENTER FIX */
