--- a/app/views/donation_mailer/information.html.erb
+++ b/app/views/donation_mailer/information.html.erb
@@ -45,13 +45,14 @@
                     style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;">
                   We are going to send all your money to <b><%= @donation.charity_project.name %></b>!
                   <b><%=  @donation.gift.receiver.name %></b> will access to a special section in our website
-                  and will be able to see your awesome video!
+                  and will be able to see your awesome video! We are going to send you an email when your friend
+                  opens the gift.
                 </td>
               </tr>
               <tr>
                 <td align="left" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;" class="padding-copy"><b>Shipping to:</b> <%= @donation.gift.receiver.address %>,
                   <%= @donation.gift.receiver.city %>, <%= @donation.gift.receiver.province %>, <%= @donation.gift.receiver.country %>
-                  <%= @donation.gift.receiver.postcode %>
+                  <%= @donation.gift.receiver.postcode %>.
                 </td>
               </tr>
             </table>
