--- a/app/views/donation_mailer/information.text.erb
+++ b/app/views/donation_mailer/information.text.erb
@@ -1,6 +1,10 @@
 Thank you for your donation!
 
-Sending your gift to <%= @donation.gift.receiver.name %> with the address: <%= @donation.gift.receiver.address %>, <%= @donation.gift.receiver.city %>, <%= @donation.gift.receiver.province %>, <%= @donation.gift.receiver.country %> <%= @donation.gift.receiver.postcode %>
+Shipping: <%= @donation.gift.receiver.address %>, <%= @donation.gift.receiver.city %>, <%= @donation.gift.receiver.province %>, <%= @donation.gift.receiver.country %> <%= @donation.gift.receiver.postcode %>
+
+We are going to send all your money to <%= @donation.charity_project.name %>!
+<%=  @donation.gift.receiver.name %> will access to a special section in our website and will be able to see your awesome video!
+We are going to send you an email when your friend opens the gift.
 
 ----------------------------------------------------------------------------
 <%= @donation.charity_project.name %> -> <%= @donation.amount %>€
