Using just one layout

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -10,7 +10,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        height: 100vh;
+        /*height: 100vh;*/
       }
       /* CLIENT-SPECIFIC STYLES */
       body, table, td, a{-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;} /* Prevent WebKit and Windows mobile changing default text sizes */
