--- a/app/views/gift_pdf/index.html.erb
+++ b/app/views/gift_pdf/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container" style="background-color: #65a868">
+<div class="container">
   <table border="0" cellpadding="0" cellspacing="0" width="100%">
     <tr>
       <td bgcolor="#ffffff" align="center">
