--- a/app/views/gift_pdf/index.html.erb
+++ b/app/views/gift_pdf/index.html.erb
@@ -1,5 +1,6 @@
-<div class="container">
-  <table border="0" cellpadding="0" cellspacing="0" width="100%">
+<p style="color: transparent">HACK</p>
+<div style="width: 80%; margin: 0 auto">
+  <table border="0" cellpadding="0" cellspacing="0" width="100%" style="margin-top: 270px">
     <tr>
       <td bgcolor="#ffffff" align="center">
         <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 500px;" class="wrapper">
@@ -22,23 +23,26 @@
               <!-- COPY -->
               <table width="100%" border="0" cellspacing="0" cellpadding="0">
                 <tr>
-                  <td align="center" style="font-size: 32px; font-family: Helvetica, Arial, sans-serif; color: #333333; padding-top: 0px;" class="padding-copy">Hello <%= gift.donation.donor.name %>!
+                  <td align="center" style="font-size: 32px; font-family: Helvetica, Arial, sans-serif; color: #333333; padding-top: 0px;" class="padding-copy">Hello <b><%= gift.receiver.name %></b>!
                   </td>
                 </tr>
                 <tr>
-                  <td align="justify"
-                      class="padding-copy"
-                      style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;">
-                    We are going to send all your money to <b><%= gift.donation.charity_project.name %></b>!
-                    <b><%=  gift.donation.gift.receiver.name %></b> will access to a special section in our website
-                    and will be able to see your awesome video! We are going to send you an email when your friend
-                    opens the gift.
+                  <td style="padding: 20px 0 20px 0; font-size: 22px; font-family: Helvetica, Arial, sans-serif; color: #666666; line-height: 40px; text-align: justify">
+                    We are glad to tell you that your friend <b><%= gift.donation.donor.name %></b> wants to tell you
+                    something! We'll let you access to a special section in our website so you'll know what's going on.
                   </td>
                 </tr>
                 <tr>
-                  <td align="left" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;" class="padding-copy"><b>Shipping to:</b> <%= gift.donation.gift.receiver.address %>,
-                    <%= gift.donation.gift.receiver.city %>, <%= gift.donation.gift.receiver.province %>, <%= gift.donation.gift.receiver.country %>
-                    <%= gift.donation.gift.receiver.postcode %>.
+                  <td align="center" class="padding-copy" style="padding-top: 15px;font-family: Helvetica, Arial, sans-serif;">
+                    <input value="<%= gift.secret_url %>" type="text" style="
+                      font-size: 22px;
+                      width: 70%;
+                      text-align: center;
+                      padding: 8px;
+                      background-color: #dbecd4;
+                      border: none;
+                      font-family: Helvetica, Arial, sans-serif;
+                    ">
                   </td>
                 </tr>
               </table>
@@ -74,7 +78,7 @@
         <!-- UNSUBSCRIBE COPY -->
         <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" style="max-width: 500px;" class="responsive-table">
           <tr>
-            <td align="center" style="font-size: 12px; line-height: 18px; font-family: Helvetica, Arial, sans-serif; color:#666666;">
+            <td align="center" style="font-size: 14px; line-height: 18px; font-family: Helvetica, Arial, sans-serif; color:#666666;">
               Ronda de Sant Pere 67, Barcelona 08003, Spain
             </td>
           </tr>
