--- a/app/views/gift_pdf/index.html.erb
+++ b/app/views/gift_pdf/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: transparent">HACK</p>
 <div style="width: 80%; margin: 0 auto">
-  <table border="0" cellpadding="0" cellspacing="0" width="100%" style="margin-top: 270px">
+  <table border="0" cellpadding="0" cellspacing="0" width="100%" style="margin-top: 200px">
     <tr>
       <td bgcolor="#ffffff" align="center">
         <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 500px;" class="wrapper">
@@ -28,8 +28,9 @@
                 </tr>
                 <tr>
                   <td style="padding: 20px 0 20px 0; font-size: 22px; font-family: Helvetica, Arial, sans-serif; color: #666666; line-height: 40px; text-align: justify">
-                    We are glad to tell you that your friend <b><%= gift.donation.donor.name %></b> wants to tell you
-                    something! We'll let you access to a special section in our website so you'll know what's going on.
+                    We are glad to tell you that your friend <b><%= gift.donation.donor.name %></b> wants to show you a video!
+                    But before you watch the video, we want to know your knowledge about the environment with a questionnaire.
+                    We'll let you access to a special section in our website so you'll know what's going on:
                   </td>
                 </tr>
                 <tr>
