No missing name checking necessary

--- a/app/views/gift_pdf/index.html.erb
+++ b/app/views/gift_pdf/index.html.erb
@@ -28,7 +28,7 @@
                 </tr>
                 <tr>
                   <td style="padding: 20px 0 20px 0; font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #666666; line-height: 40px; text-align: justify">
-                    We are glad to tell you that your friend <b><%= gift.donation ? gift.donation.donor.name: 'MISSINGNAME' %></b> wants to show you a video!
+                    We are glad to tell you that your friend <b><%= gift.donation.donor.name %></b> wants to show you a video!
                     But before you watch the video, we want to know your knowledge about the environment with a questionnaire.
                     We'll let you access to a special section in our website so you'll know what's going on:
                   </td>
