--- a/app/views/donation_mailer/information.html.erb
+++ b/app/views/donation_mailer/information.html.erb
@@ -2,17 +2,19 @@
   <tr>
     <td bgcolor="#ffffff" align="center">
       <!--[if (gte mso 9)|(IE)]>
-      <table align="center" border="0" cellspacing="0" cellpadding="0" width="500">
+      <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
         <tr>
-          <td align="center" valign="top" width="500">
+          <td align="center" valign="top" width="600">
       <![endif]-->
-      <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 500px;" class="wrapper">
+      <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;" class="wrapper">
         <tr>
           <td align="center" valign="top" style="padding: 15px 0; padding-bottom: 0px" class="logo">
-            <a href="http://tfgfrontend0.herokuapp.com" target="_blank">
-              <img alt="Logo" src="http://tfgbackend0.herokuapp.com/images/logo.png" width="200" height="200" style="display: block; font-family: Helvetica, Arial, sans-serif; color: #ffffff; font-size: 16px;" border="0">
+<!--            <a href="http://tfgfrontend0.herokuapp.com" target="_blank">-->
+<!--              <img alt="Logo" src="http://tfgbackend0.herokuapp.com/images/logo.png" width="200" height="200" style="display: block; font-family: Helvetica, Arial, sans-serif; color: #ffffff; font-size: 16px;" border="0">-->
 <!--              <p id="goc-title">GIFTOFCHARITY</p>-->
-            </a>
+<!--            </a>-->
+
+            <h2 id="r-h2">GIFTOFCHARITY<span class="r-span-line"></span></h2>
           </td>
         </tr>
       </table>
@@ -26,31 +28,31 @@
   <tr>
     <td bgcolor="#ffffff" align="center" style="padding: 15px;">
       <!--[if (gte mso 9)|(IE)]>
-      <table align="center" border="0" cellspacing="0" cellpadding="0" width="500">
+      <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
         <tr>
-          <td align="center" valign="top" width="500">
+          <td align="center" valign="top" width="600">
       <![endif]-->
-      <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 500px;" class="responsive-table">
+      <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;" class="responsive-table">
         <tr>
           <td>
             <!-- COPY -->
             <table width="100%" border="0" cellspacing="0" cellpadding="0">
               <tr>
-                <td align="center" style="font-size: 32px; font-family: Helvetica, Arial, sans-serif; color: #333333; padding-top: 0px;" class="padding-copy">Thank you for your donation <%= @donation.donor.name %>!
+                <td class="r-font" align="center" style="font-size: 32px; color: #333333; padding-top: 0px;" class="padding-copy">Thank you for your donation <b><%= @donation.donor.name %></b>!
                 </td>
               </tr>
               <tr>
                 <td align="justify"
-                    class="padding-copy"
-                    style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;">
-                  We are going to send all your money to <b><%= @donation.charity_project.name %></b>!
+                    class="padding-copy r-font"
+                    style="padding: 20px 0 0 0; font-size: 20px; line-height: 30px">
+                  Your donation is in the way to <b><%= @donation.charity_project.name %></b> project!
                   <b><%=  @donation.gift.receiver.name %></b> will access to a special section in our website
                   and will be able to see your awesome video! We are going to send you an email when your friend
                   opens the gift.
                 </td>
               </tr>
               <tr>
-                <td align="left" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;" class="padding-copy"><b>Shipping to:</b> <%= @donation.gift.receiver.address %>,
+                <td align="left" style="padding: 20px 0 0 0; font-size: 19px; line-height: 25px; color: black;" class="padding-copy r-font"><b>Shipping to:</b> <%= @donation.gift.receiver.address %>,
                   <%= @donation.gift.receiver.city %>, <%= @donation.gift.receiver.province %>, <%= @donation.gift.receiver.country %>
                   <%= @donation.gift.receiver.postcode %>.
                 </td>
@@ -69,11 +71,11 @@
   <tr>
     <td bgcolor="#ffffff" align="center" style="padding: 15px;" class="padding">
       <!--[if (gte mso 9)|(IE)]>
-      <table align="center" border="0" cellspacing="0" cellpadding="0" width="500">
+      <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
         <tr>
-          <td align="center" valign="top" width="500">
+          <td align="center" valign="top" width="600">
       <![endif]-->
-      <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 500px;" class="responsive-table">
+      <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;" class="responsive-table">
         <tr>
           <td style="padding: 10px 0 0 0; border-top: 1px dashed #aaaaaa;">
             <!-- TWO COLUMNS -->
@@ -86,7 +88,7 @@
                       <td style="padding: 0 0 10px 0;">
                         <table cellpadding="0" cellspacing="0" border="0" width="100%">
                           <tr>
-                            <td align="left" style="font-family: Arial, sans-serif; color: #333333; font-size: 16px;"><%= @donation.charity_project.name %>
+                            <td class="r-font" align="left" style="color: #333333; font-size: 18px;"><%= @donation.charity_project.name %>
                             </td>
                           </tr>
                         </table>
@@ -99,7 +101,7 @@
                       <td style="padding: 0 0 10px 0;">
                         <table cellpadding="0" cellspacing="0" border="0" width="100%">
                           <tr>
-                            <td align="right" style="font-family: Arial, sans-serif; color: #333333; font-size: 16px;"><%= @donation.amount %>€</td>
+                            <td class="r-font" align="right" style="color: #333333; font-size: 18px;"><%= @donation.amount %>€</td>
                           </tr>
                         </table>
                       </td>
@@ -122,7 +124,7 @@
                       <td style="padding: 0 0 10px 0;">
                         <table cellpadding="0" cellspacing="0" border="0" width="100%">
                           <tr>
-                            <td align="left" style="font-family: Arial, sans-serif; color: #333333; font-size: 16px; font-weight: bold;">Total</td>
+                            <td class="r-font" align="left" style="color: #333333; font-size: 18px; font-weight: bold;">Total</td>
                           </tr>
                         </table>
                       </td>
@@ -134,7 +136,7 @@
                       <td>
                         <table cellpadding="0" cellspacing="0" border="0" width="100%">
                           <tr>
-                            <td align="right" style="font-family: Arial, sans-serif; color: #7ca230; font-size: 16px; font-weight: bold;"><%= @donation.amount %>€</td>
+                            <td class="r-font" align="right" style="color: #81C784; font-size: 18px; font-weight: bold;"><%= @donation.amount %>€</td>
                           </tr>
                         </table>
                       </td>
@@ -156,11 +158,11 @@
   <tr>
     <td bgcolor="#ffffff" align="center" style="padding: 15px;">
       <!--[if (gte mso 9)|(IE)]>
-      <table align="center" border="0" cellspacing="0" cellpadding="0" width="500">
+      <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
         <tr>
-          <td align="center" valign="top" width="500">
+          <td align="center" valign="top" width="600">
       <![endif]-->
-      <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 500px;" class="responsive-table">
+      <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;" class="responsive-table">
         <tr>
           <td>
             <table width="100%" border="0" cellspacing="0" cellpadding="0">
@@ -169,7 +171,7 @@
                   <!-- COPY -->
                   <table width="100%" border="0" cellspacing="0" cellpadding="0">
                     <tr>
-                      <td align="left" style="padding: 0 0 0 0; font-size: 14px; line-height: 18px; font-family: Helvetica, Arial, sans-serif; color: #aaaaaa; font-style: italic;" class="padding-copy"><%= @donation.created_at%>, with order id: <%= @donation.id %>
+                      <td class="r-font" align="left" style="padding: 0 0 0 0; font-size: 16px; line-height: 18px; color: #666666; font-style: italic;" class="padding-copy"><%= @donation.created_at%>, with order id: <%= @donation.id %>
                       </td>
                     </tr>
                   </table>
@@ -188,17 +190,17 @@
   </tr>
   <tr>
     <td bgcolor="#ffffff" align="center" style="padding: 15px;">
-      <table border="0" cellpadding="0" cellspacing="0" width="500" class="responsive-table">
+      <table border="0" cellpadding="0" cellspacing="0" width="600" class="responsive-table">
         <tr>
           <td>
             <table width="100%" border="0" cellspacing="0" cellpadding="0">
               <tr>
                 <!-- COPY -->
-                <td align="center" style="font-size: 32px; font-family: Helvetica, Arial, sans-serif; color: #333333; padding-top: 0px;" class="padding-copy">Need help?
+                <td class="r-font" align="center" style="font-size: 32px; color: #333333; padding-top: 0px;" class="padding-copy">Need help?
                 </td>
               </tr>
               <tr>
-                <td align="left" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;" class="padding-copy">If you have noticed something wrong contact to us by <b>email</b> and we will
+                <td class="r-font" align="left" style="padding: 20px 0 0 0; font-size: 19px; line-height: 25px; color: black;" class="padding-copy">If you have noticed something wrong contact to us by <b>email</b> and we will
                   be happy to help.
                 </td>
               </tr>
@@ -211,7 +213,8 @@
                         <table border="0" cellspacing="0" cellpadding="0" class="mobile-button-container">
                           <tr>
                             <td align="center" style="border-radius: 3px;" bgcolor="#66BB6A">
-                              <a href="https://tfgfrontend0.herokuapp.com" target="_blank" style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; border-radius: 3px; padding: 15px 25px; border: 1px solid #66BB6A; display: inline-block;" class="mobile-button">Go to Gift Of Charity</a></td>
+                              <a href="https://tfgfrontend0.herokuapp.com" target="_blank" id="r-btn" class="mobile-button">GO TO GIFTOFCHARITY</a></td>
+<!--                              <a target="_blank" href="https://tfgfrontend0.herokuapp.com" id='btn-link' class="jss56 jss67 jss86 jss91 jss51 jss53 jss148 jss122 jss330 jss133 jss135 jss136 jss138 jss146 jss332 jss97" tabindex="0" role="button"><span id="btn-text-span">Give away</span><span class="btn-cointainer-span"></span></a>-->
                           </tr>
                         </table>
                       </td>
@@ -233,14 +236,14 @@
   <tr>
     <td bgcolor="#ffffff" align="center" style="padding: 20px 0px;">
       <!--[if (gte mso 9)|(IE)]>
-      <table align="center" border="0" cellspacing="0" cellpadding="0" width="500">
+      <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
         <tr>
-          <td align="center" valign="top" width="500">
+          <td align="center" valign="top" width="600">
       <![endif]-->
       <!-- UNSUBSCRIBE COPY -->
-      <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" style="max-width: 500px;" class="responsive-table">
+      <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" style="max-width: 600px;" class="responsive-table">
         <tr>
-          <td align="center" style="font-size: 12px; line-height: 18px; font-family: Helvetica, Arial, sans-serif; color:#666666;">
+          <td class="r-font" align="center" style="font-size: 16px; line-height: 18px; color:#666666;">
             Ronda de Sant Pere 67, Barcelona 08003, Spain
             <br>
             <a href="http://tfgfrontend0.herokuapp.com" target="_blank" style="color: #666666; text-decoration: none;">Visit out website</a>
