--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -4,7 +4,50 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700|Work+Sans:300,400">
     <style>
+      .r-font {
+        /*font-family: Helvetica, Arial, sans-serif;*/
+        font-family: 'Work Sans', sans-serif;
+        font-weight: 300;
+        color: black;
+      }
+
+      #r-btn{
+        background-color: #81C784;
+        font-size: 1rem;
+        font-family: 'Roboto Condensed', sans-serif;
+        text-decoration: none;
+        color: black;
+        border-radius: 0px;
+        padding: 21px 48px;
+        border: none;
+        display: inline-block;
+      }
+
+      #r-btn:hover{
+        background-color:#66BB6A;
+        text-decoration: underline;
+      }
+
+      #r-h2 {
+        color: rgba(0, 0, 0, 0.87);
+        font-size: 40px;
+        font-family: 'Roboto Condensed', sans-serif;
+        font-weight: 700;
+        line-height: 1.17;
+        text-transform: uppercase;
+        margin-bottom: 0px;
+      }
+
+      .r-span-line {
+        width: 55px;
+        height: 4px;
+        margin: 4px;
+        display: block;
+        background-color: #81C784;
+      }
+
       /* CLIENT-SPECIFIC STYLES */
       body, table, td, a{-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;} /* Prevent WebKit and Windows mobile changing default text sizes */
       table, td{mso-table-lspace: 0pt; mso-table-rspace: 0pt;} /* Remove spacing between tables in Outlook 2007 and up */
