--- a/app/views/donation_mailer/information.html.erb
+++ b/app/views/donation_mailer/information.html.erb
@@ -46,15 +46,15 @@
                     class="padding-copy r-font"
                     style="padding: 20px 0 0 0; font-size: 20px; line-height: 30px">
                   Your donation is in the way to <b><%= @donation.charity_project.name %></b> project!
-                  <b><%=  @donation.gift.receiver.name %></b> will access to a special section in our website
+                  <b><%=  @donation.receiver.name unless @donation.receiver.blank? %></b> will access to a special section in our website
                   and will be able to see your awesome video! We are going to send you an email when your friend
                   opens the gift.
                 </td>
               </tr>
               <tr>
-                <td align="left" style="padding: 20px 0 0 0; font-size: 19px; line-height: 25px; color: black;" class="padding-copy r-font"><b>Shipping to:</b> <%= @donation.gift.receiver.address %>,
-                  <%= @donation.gift.receiver.city %>, <%= @donation.gift.receiver.province %>, <%= @donation.gift.receiver.country %>
-                  <%= @donation.gift.receiver.postcode %>.
+                <td align="left" style="padding: 20px 0 0 0; font-size: 19px; line-height: 25px; color: black;" class="padding-copy r-font"><b>Shipping to:</b> <%= @donation.receiver.address unless @donation.receiver.blank? %>,
+                  <%= @donation.receiver.city unless @donation.receiver.blank? %>, <%= @donation.receiver.province unless @donation.receiver.blank? %>, <%= @donation.receiver.country unless @donation.receiver.blank? %>
+                  <%= @donation.receiver.postcode unless @donation.receiver.blank? %>.
                 </td>
               </tr>
             </table>
