Revert "Receiver can be removed"
This reverts commit 12686df6

--- a/app/views/gift_pdf/index.html.erb
+++ b/app/views/gift_pdf/index.html.erb
@@ -21,7 +21,7 @@
               <table width="100%" border="0" cellspacing="0" cellpadding="0">
                 <tr>
                   <td class="r-font" align="center" style="font-size: 32px; color: #333333; padding-top: 0px;" class="padding-copy">
-                    Hello <b><%= gift.receiver.name unless gift.receiver.blank? %></b>!
+                    Hello <b><%= gift.receiver.name %></b>!
                   </td>
                 </tr>
                 <tr>
