--- a/app/views/donation_mailer/information.html.erb
+++ b/app/views/donation_mailer/information.html.erb
@@ -38,7 +38,7 @@
             <!-- COPY -->
             <table width="100%" border="0" cellspacing="0" cellpadding="0">
               <tr>
-                <td class="r-font" align="center" style="font-size: 32px; color: #333333; padding-top: 0px;" class="padding-copy">Thank you for your donation <b><%= @donation.donor.name %></b>!
+                <td class="r-font" align="center" style="font-size: 32px; color: #333333; padding-top: 0px;" class="padding-copy">Thank you for your donation <b><%= @donation.get_donor.name %></b>!
                 </td>
               </tr>
               <tr>
@@ -46,15 +46,15 @@
                     class="padding-copy r-font"
                     style="padding: 20px 0 0 0; font-size: 20px; line-height: 30px">
                   Your donation is in the way to <b><%= @donation.charity_project.name %></b> project!
-                  <b><%=  @donation.gift.receiver.name %></b> will access to a special section in our website
+                  <b><%=  @donation.get_receiver.name %></b> will access to a special section in our website
                   and will be able to see your awesome video! We are going to send you an email when your friend
                   opens the gift.
                 </td>
               </tr>
               <tr>
-                <td align="left" style="padding: 20px 0 0 0; font-size: 19px; line-height: 25px; color: black;" class="padding-copy r-font"><b>Shipping to:</b> <%= @donation.gift.receiver.address %>,
-                  <%= @donation.gift.receiver.city %>, <%= @donation.gift.receiver.province %>, <%= @donation.gift.receiver.country %>
-                  <%= @donation.gift.receiver.postcode %>.
+                <td align="left" style="padding: 20px 0 0 0; font-size: 19px; line-height: 25px; color: black;" class="padding-copy r-font"><b>Shipping to:</b> <%= @donation.get_receiver.address %>,
+                  <%= @donation.get_receiver.city %>, <%= @donation.get_receiver.province %>, <%= @donation.get_receiver.country %>
+                  <%= @donation.get_receiver.postcode %>.
                 </td>
               </tr>
             </table>
