--- a/app/views/donation_mailer/information.text.erb
+++ b/app/views/donation_mailer/information.text.erb
@@ -1,9 +1,9 @@
 Thank you for your donation!
 
-Shipping: <%= @donation.gift.receiver.address %>, <%= @donation.gift.receiver.city %>, <%= @donation.gift.receiver.province %>, <%= @donation.gift.receiver.country %> <%= @donation.gift.receiver.postcode %>
+Shipping: <%= @donation.get_receiver.address %>, <%= @donation.get_receiver.city %>, <%= @donation.get_receiver.province %>, <%= @donation.get_receiver.country %> <%= @donation.get_receiver.postcode %>
 
 We are going to send all your money to <%= @donation.charity_project.name %>!
-<%=  @donation.gift.receiver.name %> will access to a special section in our website and will be able to see your awesome video!
+<%=  @donation.get_receiver.name %> will access to a special section in our website and will be able to see your awesome video!
 We are going to send you an email when your friend opens the gift.
 
 ----------------------------------------------------------------------------
