Removed some validations due to errors

--- a/app/views/admin/donations/_form.html.erb
+++ b/app/views/admin/donations/_form.html.erb
@@ -1,4 +1,5 @@
 <%= semantic_form_for [:admin, @donation], builder: ActiveAdmin::FormBuilder do |f| %>
+  <%= f.semantic_errors *f.object.errors.keys %>
   <%= f.inputs 'Donation Information', :amount %>
 
   <%= f.inputs 'Charity Project' do  %>
