--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -19,8 +19,8 @@
 @import "charity_projects";
 @import "questionnaires";
 
-$skinMainFirstColor: #2b472d !default;
-$skinMainSecondColor: #65a868 !default;
-$skinBorderWindowColor: #e7eee6 !default;
+$skinMainFirstColor: #455785 !default;
+$skinMainSecondColor: #455785 !default;
+$skinBorderWindowColor: rgba(0,0,0,0) !default;
 @import "wigu/active_admin_theme";
 @import "customice_theme";
