--- a/app/assets/stylesheets/customice_theme.scss
+++ b/app/assets/stylesheets/customice_theme.scss
@@ -1,3 +1,57 @@
 .flash.flash_alert {
   background-color: #845b5b !important;
 }
+
+html {
+  background: #f3f3f3;
+}
+
+body.active_admin {
+  background: #f3f3f3;
+}
+
+#wrapper {
+  #title_bar {
+    border-bottom: none !important;
+    background-color: #455785 !important;
+
+    #titlebar_right {
+      .action_item a {
+        background-color: #7383b5 !important;
+
+        &:hover {
+          background-color: lighten(#7383b5, 4%)!important;
+        }
+      }
+    }
+  }
+
+  #header {
+    background-color: black !important;
+    border-bottom: none !important;
+
+    h1.site_title {
+      color: white;
+      font-size: 18px;
+      font-weight: bold;
+    }
+
+    ul.tabs > li.current > a, ul.tabs > li:hover > a {
+      background-color: #5f5f5f;
+    }
+  }
+
+  table.index_table {
+    border: none;
+
+    thead {
+      background-color: #e2e2e2;
+    }
+  }
+}
+
+.panel {
+  h3 {
+    margin-top: 0;
+  }
+}
