--- a/app/views/admin/donations/_edit.html.erb
+++ b/app/views/admin/donations/_edit.html.erb
@@ -1,24 +1,26 @@
 <%= semantic_form_for [:admin, @donation], builder: ActiveAdmin::FormBuilder do |f| %>
   <%= f.semantic_errors *f.object.errors.keys %>
 
-  <%= f.inputs 'Donation Information' do %>
+  <%= f.inputs 'Donation' do %>
   <%=   f.input :amount %>
   <%=   f.input :charity_project %>
   <% end %>
 
   <% if f.object.donor %>
-    <%= f.inputs 'Donor Information' do %>
-      <a style="padding: 10px" href="<%= admin_donor_path(f.object.donor.id) %>">Go to donor information</a>
+    <%= f.inputs 'Donor' do %>
+      <a style="padding: 10px" href="<%= admin_donor_path(f.object.donor.id) %>">Go to donor <b><%= f.object.donor.name %></b> information</a>
     <% end %>
   <% end %>
 
-  <%= f.inputs 'Gift Information' do %>
-    <a style="padding: 10px" href="<%= admin_gift_path(f.object.gift.id) %>">Go to gift information</a>
+  <%= f.inputs 'Gift' do %>
+    <a style="padding: 10px" href="<%= admin_gift_path(f.object.gift.id) %>">Go to gift <b><%= f.object.gift.id %></b> information</a>
   <% end %>
 
   <% if f.object.gift.receiver %>
-    <%= f.inputs 'Reeciver Information' do %>
-      <a style="padding: 10px" href="<%= admin_receiver_path(f.object.gift.receiver.id) %>">Go to receiver information</a>
+    <%= f.inputs 'Receiver' do %>
+      <a style="padding: 10px" href="<%= admin_receiver_path(f.object.gift.receiver.id) %>">
+        Go to receiver <b><%= f.object.gift.receiver.name %></b> information
+      </a>
     <% end %>
   <% end %>
 
